syntax = "proto3";

option  java_package = "gmy.grpc.examples";

package greeter;

// 定义一个服务
service Greeter {
  // 普通模式
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // 服务端流
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply) {}
  // 客户端流
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply) {}
  // 双端流
  rpc SayHelloBidirectionalStream (stream HelloRequest) returns (stream HelloReply) {}
}

// request消息体
message HelloRequest {
  string name = 1;
}

// response消息体
message HelloReply {
  string message = 1;
}
